--- a/templates/exam_points.html
+++ b/templates/exam_points.html
@@ -284,7 +284,7 @@ $(document).ready(function(){
             additional_class: 'rotate-width-100'
         },
         {
-            editable: true,
+            editable: {% if is_exam %}true{% else %}false{% endif %},
             name: "exam_points",
             label: "Баллы за экзамен",
             cell: Backgrid.MyCell.extend({
