--- a/templates/exam_points.html
+++ b/templates/exam_points.html
@@ -213,14 +213,16 @@ $(document).ready(function(){
                 model.url = "{% url 'disciplines:api:exam_scores' %}";
                 model.save(null, { type: "POST", error: function (model, response, options){
                     max_exam_points = 0;
-                    if ('old' in response ){
-                        model.set("exam_mark", response["old"]["mark"]);
-                        model.set("mark_symbol", response["old"]["symbol"]);
-                        model.set("additional_points", response["old"]["additional_points"]);
-                        model.set("exam_points", response["old"]["exam_points"]);
-                        model.set("total_points", response["old"]["total"]);
-                        max_exam_points = response['max_exam_points']
+                    if ('old' in response.responseJSON ){
+                        model.set("exam_mark", response.responseJSON["old"]["mark"]);
+                        model.set("mark_symbol", response.responseJSON["old"]["symbol"]);
+                        model.set("additional_points", response.responseJSON["old"]["additional_points"]);
+                        model.set("exam_points", response.responseJSON["old"]["exam_points"]);
+                        model.set("total_points", response.responseJSON["old"]["total"]);
                     }
+                    max_exam_points = response.responseJSON['max_exam_points']
+                    console.log(max_exam_points);
+                    console.log(response);
                     show_error(get_error_msg(response.status, 1, max_exam_points));
                 }, success: function(model, response, options){
                     var response_data;
