Fixed Examining form and procedure.

--- a/templates/disc_list.html
+++ b/templates/disc_list.html
@@ -14,7 +14,7 @@
     <div class="alert alert-danger" role="alert" id="error" style="visibility:hidden;position:fixed;top:0;left:0;width:100%;z-index:100;"></div>
     <div class="alert alert-info" role="alert">
         <b>ВНИМАНИЕ! Уважаемые пользователи!</b> теперь для просмотра баллов БРС необходимо <b>нажимать на <u>название предмета</u> в списке!</b><br/>
-        Пункт меню "Баллы БРС" в контекстном меню "Действия" <b>ИСКЛЮЧЕН!</b>
+        Пункт меню "Баллы БРС" в контекстном меню "Действия" <b>УДАЛЕН!</b>
     </div>
     {% include 'select_disc_modal.html' %}
     <h1>Список дисциплин</h1>
