--- a/static/css/my.css
+++ b/static/css/my.css
@@ -15,6 +15,10 @@ th.rotate-width-100{
     width: 100px;
     text-align: center;
 }
+th.width-60{
+    width: 60px;
+    text-align: center;
+}
 th.wordwrap{
     width: 100px;
     word-break: break-all;
