Added some help info in Exam scores page

--- a/templates/exam_points.html
+++ b/templates/exam_points.html
@@ -11,7 +11,8 @@
             дополнительные баллы (если таковые есть). Все остальное устанавливается автоматически.<br/>
             Если студент отсутсвует или у него индивидуальный план сдачи сессии, необходимо поставить галочку на соответствующей
             колонке. {% if is_exam %}Для студентов, которые отсутствуюти или имеют индивидуальный план, не допущены к экзамену,
-            то баллы за экзамен нельзя уставить.{% endif %}
+            то баллы за экзамен нельзя уставить.{% endif %}<br/>
+            Для получения ведомости нужно нажать на кнопку "Завершить {{control_type}}", затем на кнопку "Скачать ведомость"
         </div>
     </div>
 </div>
