--- a/templates/exam_points.html
+++ b/templates/exam_points.html
@@ -9,6 +9,7 @@
         <div class="alert alert-info" role="alert">
             Уважаемые коллеги! В данной форме вы должны устанавливать {% if is_exam %}только баллы за экзамен,{% endif %}
             дополнительные баллы (если таковые есть). Все остальное устанавливается автоматически.<br/>
+            Входные баллы {{ control_type }} проставляются из последнего заполненного контрольного среза баллов БРС.<br/>
             Если студент отсутсвует или у него индивидуальный план сдачи сессии, необходимо поставить галочку на соответствующей
             колонке. {% if is_exam %}Для студентов, которые отсутствуюти или имеют индивидуальный план, не допущены к экзамену,
             то баллы за экзамен нельзя уставить.{% endif %}<br/>
@@ -260,8 +261,8 @@ $(document).ready(function(){
     var data=[
                 {% for student_mark in object_list %}
                 {
-                        "absence": false,
-                        "individual": false,
+                        "absence": {% if student_mark.mark == 0 %}true{% else %}false{% endif %},
+                        "individual": {% if student_mark.mark == 1 %}true{% else %}false{% endif %},
                         "Num": "{{ forloop.counter }}",
                         "student_id":"{{ student_mark.student.id }}",
                         "exam_id":"{{ exam.id }}",
