Added info message to discipline list page. and removed second "МЕНЮ" in base.html.

--- a/templates/disc_list.html
+++ b/templates/disc_list.html
@@ -16,6 +16,11 @@
         <b>ВНИМАНИЕ! Уважаемые пользователи!</b> теперь для просмотра баллов БРС необходимо <b>нажимать на <u>название предмета</u> в списке!</b><br/>
         Пункт меню "Баллы БРС" в контекстном меню "Действия" <b>УДАЛЕН!</b>
     </div>
+    <div class="alert alert-info" role="alert">
+        <b>Уважаемые пользователи</b>, хотим обратить ваше внимание на пункт меню <b>"ПРОФИЛЬ ПОЛЬЗОВАТЕЛЯ"</b>! На этой странице вы можете поменять свой пароль,
+        и установить ваш действующий адрес электронной почты, которым вы чаще всего пользуетесь. Корректный адрес электронной почты необходим для
+        процесса востановления пароля, если вы его забудете.
+    </div>
     {% include 'select_disc_modal.html' %}
     <h1>Список дисциплин</h1>
     {% if teacher %}
