Added info message in exam page

--- a/templates/exam_points.html
+++ b/templates/exam_points.html
@@ -15,6 +15,9 @@
             то баллы за экзамен нельзя уставить.{% endif %}<br/>
             Для получения ведомости нужно нажать на кнопку "Завершить {{control_type}}", затем на кнопку "Скачать ведомость"
         </div>
+        <div class="alert alert-info" role="alert">
+            Если ширины колонки таблицы все одинаковые и ФИО не входит в колонку, то возможно у вас не обновился css-файл. Для его обновления нажмите Ctrl+F5
+        </div>
     </div>
 </div>
 <div class="row">
