Now teachers can view all their courses, including finished.

--- a/templates/disc_list.html
+++ b/templates/disc_list.html
@@ -27,6 +27,12 @@
     <h2>Преподаватель: {{ teacher.FIO }}</h2>
     {% endif %}
     <br>
+    <div class="row justify-content-end">
+        <div class="col-3">
+            <div id="course_state_filter"><label>Состояние курса:</label></div>
+        </div>
+    </div>
+    <br>
     <table id="my_table2" class="table table-bordered">
         <thead class="thead-light">
             <tr>
@@ -35,6 +41,7 @@
                 <th>Семестр</th>
                 <th>Группа</th>
                 <th>Преподаватель</th>
+                <th>Состояние курса</th>
                 <th></th>
             </tr>
         </thead>
@@ -46,6 +53,7 @@
                 <td> {{ discipline.discipline_detail.semester }} </td>
                 <td> {{ discipline.group.Name }} </td>
                 <td> {{ discipline.lecturer.FIO }} </td>
+                <td> {% if discipline.is_finished %}Окончен{% else %}Не окончен{% endif %} </td>
                 <td>
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Действия</button>
