Course list is updated

--- a/templates/disc_list.html
+++ b/templates/disc_list.html
@@ -13,13 +13,7 @@
 {% block content %}
     <div class="alert alert-danger" role="alert" id="error" style="visibility:hidden;position:fixed;top:0;left:0;width:100%;z-index:100;"></div>
     <div class="alert alert-info" role="alert">
-        <b>ВНИМАНИЕ! Уважаемые пользователи!</b> теперь для просмотра баллов БРС необходимо <b>нажимать на <u>название предмета</u> в списке!</b><br/>
-        Пункт меню "Баллы БРС" в контекстном меню "Действия" <b>УДАЛЕН!</b>
-    </div>
-    <div class="alert alert-info" role="alert">
-        <b>Уважаемые пользователи</b>, хотим обратить ваше внимание на пункт меню <b>"ПРОФИЛЬ ПОЛЬЗОВАТЕЛЯ"</b>! На этой странице вы можете поменять свой пароль,
-        и установить ваш действующий адрес электронной почты, которым вы чаще всего пользуетесь. Корректный адрес электронной почты необходим для
-        процесса востановления пароля, если вы его забудете.
+        <b>ВНИМАНИЕ! Уважаемые пользователи!</b> Теперь в списке курсов можно просматривать и оконченные курсы. Если у Вас не отображается фильтр по состоянию курса, то нажмите <b>Ctrl+F5</b>.
     </div>
     {% include 'select_disc_modal.html' %}
     <h1>Список дисциплин</h1>
@@ -29,7 +23,7 @@
     <br>
     <div class="row justify-content-end">
         <div class="col-3">
-            <div id="course_state_filter"><label>Состояние курса:</label></div>
+            <div id="course_state_filter"><label>Показать курсы:</label></div>
         </div>
     </div>
     <br>
