Now it check if student points are in ascending order and do not exceed max points for the checkpoint.

--- a/templates/students_scores.html
+++ b/templates/students_scores.html
@@ -103,7 +103,13 @@ $(document).ready(function(){
             if (type == 1)msg += 'максимальные ';
             msg += 'баллы для данной дисциплины!';
         }else if(status == 500){
-            msg = 'Ошибка при сохранении баллов, обратитесь к администратору!'
+            msg = 'Ошибка при сохранении баллов, обратитесь к администратору!';
+        } else if (status == 406){
+            msg = 'Вы не установили Максимальные баллы контрольных срезов';
+        } else if (status == 409){
+            msg = 'Баллы должны устанавливаться по нарастющему порядку!';
+        } else if (status == 411){
+            msg = 'Баллы не должны превышать максимальные баллы за срез!';
         }
         return msg;
     }
