--- a/templates/students_scores.html
+++ b/templates/students_scores.html
@@ -256,24 +256,27 @@ $(document).ready(function(){
                 },
               {% endfor %}
             ];
-    var models_changed = []
+    //var models_changed = {}
     var Application = Backbone.Model.extend({
         initialize: function(){
             this.on("change", function(model, response, options){
                 if (options && options.save === false) return;
-                if (models_changed.includes(model.get("student_id"))) return;
-                models_changed.push(model.get("student_id"));
+                //if (models_changed[model.get("student_id")] == null || ) return;
+                //console.log(models_changed);
+                //models_changed[model.get("student_id")]=3;
                 model.url = "{% url 'disciplines:api:brs_scores' %}";
                 model.save(null, { type: "POST", error: function (model, response, options){
                     $.each(response.responseJSON['old'], function(key, value){
                         model.set("checkpoint_" + key.toString(), value);
                     });
-                    models_changed.splice(models_changed.indexOf(model.get("student_id")));
+                    //console.log(models_changed);
+                    //models_changed.splice(models_changed.indexOf(model.get("student_id")));
                     let msg = get_error_msg(response.status, 2);
                     let error_obj = $('<div class="alert alert-danger" role="alert" id="error">'+msg+'</div>').appendTo('#error_container');
 			        $(error_obj).delay(2000).slideUp(500, function() {$(this).alert('close');});
-                }, success: function(model, response, options){
-                    models_changed.splice(models_changed.indexOf(model.get("student_id")));
+                }, success: function(model, xhr, options){
+                    //console.log(models_changed);
+                    //models_changed.splice(models_changed.indexOf(model.get("student_id")));
                 }
                 });
                 console.log("Changed model " + model.get("fullname") + " " + model.get("student_id"));
