Переименование атрибута в модели Group

--- a/templates/brs_students.html
+++ b/templates/brs_students.html
@@ -34,7 +34,7 @@
                         <td></td>
                         {% for gr in grouplist %}
                             {% if gr.student.id == i.student.id %}
-                                <td> {{ gr.group.Name }}</td>
+                                <td> {{ gr.group.name }}</td>
                             {% endif %}
                         {% endfor %}
                         <td> {{ s.name }} </td>
