--- a/templates/nomenclature_disciplines.html
+++ b/templates/nomenclature_disciplines.html
@@ -37,7 +37,7 @@
                         4
                      {% endif %}
                 </td>
-                <td> {{ course.group.Name }} </td>
+                <td> {{ course.group.name }} </td>
                 <td> {{ course.discipline_detail.discipline.Name }} </td>
                 <td> {{ course.discipline_detail.semester }} </td>
                 <td>
