--- a/templates/exam_points.html
+++ b/templates/exam_points.html
@@ -55,7 +55,7 @@
 </div>
 <div class="row">
     <div class="col">
-        <h2>Дисциплина: <u>{{ discipline.discipline_detail.discipline.Name }}</u></h2>
+        <h2>Дисциплина: <u>{{ discipline.discipline_detail.discipline.name }}</u></h2>
     </div>
 </div>
 <div class="row">
