--- a/templates/students_scores.html
+++ b/templates/students_scores.html
@@ -52,7 +52,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <h1>Баллы БРС: {{ discipline.discipline_detail.discipline.Name }}</h1>
+                <h1>Баллы БРС: {{ discipline.discipline_detail.discipline.name }}</h1>
             </div>
         </div>
         <div class="row">
