Переход к тегу static для работы с Django 3

--- a/templates/students_scores.html
+++ b/templates/students_scores.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load staticfiles %}
+{% load static %}
 {% load extra_tags %}
 {% block title %}Баллы БРС для группы {{ discipline.group.name }}{% endblock %}
 {% block content %}
